# SkyScripting

./: Notes  README.md  eval_model.ipynb  requirements.txt  skyscript-ocr-train-base.ipynb
finger_tracker/: DotTracker.cpp  DotTracker.h  main.cpp
model_ckpts/: ocr_letters.pth
models/: cnn_base.py
skyscript_app/: README.md  pubspec.yaml
skyscript_app/android/: CMakeLists.txt  build.gradle  settings.gradle
skyscript_app/android/app/: build.gradle
skyscript_app/android/app/src/main/: AndroidManifest.xml
skyscript_app/android/app/src/main/kotlin/com/example/skyscriptingapp/: MainActivity.kt
skyscript_app/android/gradle/wrapper/: gradle-wrapper.properties
skyscript_app/android/sdk/: build.gradle
skyscript_app/assets/: ocr_letters_scripted.pt
skyscript_app/ios/Flutter/: Release.xcconfig
skyscript_app/ios/Runner/: Info.plist
skyscript_app/ios/Runner.xcodeproj/: project.pbxproj
skyscript_app/lib/: main.dart
skyscript_app/lib/camera/: camera_screen.dart  (+2 more)
skyscript_app/linux/: my_application.cc
skyscript_app/web/: manifest.json
skyscript_model/: emnist_letters_map.json  eval_model.ipynb  skyscript-ocr-train-base.ipynb  skyscript-ocr-train-wavemix.ipynb
skyscript_model/hanna/: eval_model.ipynb
skyscriptingapp/: pubspec.yaml
skyscriptingapp/lib/: global_bindings.dart  main.dart  scan_controller.dart
skyscriptingapp/linux/: CMakeLists.txt
skyscriptingapp/test/: widget_test.dart
skyscriptingapp/web/: index.html
skyscriptingapp/windows/: CMakeLists.txt
trace_prediction/: bounding_box.py  cnn_base.py  main.py  predictor.py
(+27 files in other folders)
